// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense with total 1`] = `
<p>
  Viewing 
  1
   expenses totalling 
  $1.95
</p>
`;

exports[`should render ExpensesSummary with 2 expenses with total 1`] = `
<p>
  Viewing 
  3
   expenses totalling 
  $1,141.95
</p>
`;
